# HairPort

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: README.md
configs/: default.yaml
fit_lmk/: __init__.py  batch_process.py  camera_utils.py  enhancer_singleton.py  multi_view_fusion.py  pipeline.py  ray_intersector.py  run.sh  run_standalone.py  segmentation.py  visualize.py
hairport/: __init__.py  captioner_pipeline.py  config.py  data.py  downsample_shape_meshes.py  pipeline.py  postprocess.py  postprocess_shape_mesh.py  view_aligner.py  view_blender.py  view_enhancer.py  view_generator.py
hairport/bald_konverter/: README.md  __init__.py  cli.py  pipeline.py
hairport/balder/: bald_konverter_w_seg.py  bald_konverter_wo_seg.py  nano_banana_baldifier.py  prepare_bk_inputs.py  prompt_w_seg.txt  prompt_wo_seg.txt  qwen_baldifier.py
hairport/core/: __init__.py  bg_remover.py  captioner.py  facial_landmark_detector.py  flame_fitting.py  mesh_utils.py  sam_extractor.py  super_resolution.py
hairport/dataset_generation/: create_celeba_dataset.py  create_custom_pairs.py
hairport/fit_lmk/: __init__.py  batch_process.py  blender_renderer.py  enhancer_singleton.py  multi_view_fusion.py  pipeline.py  run_standalone.py  segmentation.py
hairport/metrics/: __init__.py  latex_builder.py  (+7 more)
scripts/: install.sh  setup_submodules.sh
utils/: bg_remover.py  captioner_pipeline.py  convertGLB2OBJ.py  depth_utils.py  facial_landmark_detector.py  flame_fitting.py  hair_utils.py  interactive_visualization.py  mask_extractor.py  mesh_process.py  mesh_texture.py  mesh_transformation.py  render_utils.py  sam_mask_extractor.py  segmentation_handler.py  smplx_handler.py  super_resolution.py
(+61 files in other folders)
